--- a/grafana-operator.yaml
+++ b/grafana-operator.yaml
@@ -20,7 +20,7 @@ metadata:
   name: grafana
   namespace: monitoring
 spec:
-  replica: 2
+  replicas: 2
   selector:
     matchLabels:
       app: grafana
